feat: update car scene generation and settings

--- a/汽车设定.md
+++ b/汽车设定.md
@@ -27,6 +27,7 @@
 3.  光影纯净完整: 光线必须均匀、连续、完整，严禁在车身表面出现斑驳、破碎的光影。光影过渡需自然流畅，以凸显车身线条。
 4.  镜头模拟真实: 模拟“高端全画幅相机质感”，主体清晰锐利，并具备自然的浅景深效果。
 5.  风格清新高级: 色彩风格需“清新明快、和谐高级”，整体色调干净、明亮。氛围追求“轻松惬意、宁静致远”，传递积极、温暖的故事感。
+6.  构图简洁优雅: 遵循“少即是多”的原则，画面元素精简，避免不必要的干扰，营造开阔、纯粹、有呼吸感的视觉空间。
 
 ## 五、核心创作原则
 
@@ -58,18 +59,18 @@
 
 1. 核心主体:
 - 外观与细节: 严格维持参考图中的车辆外观、细节与设计，不做任何改动。
-- 状态: [车辆的动态或静态描述。若为静态且场景中有公路，则必须描述为停靠在路边]
+- 状态: [车辆必须在划定的停车区或路肩自然停靠，姿态与地面完美贴合，严格遵守透视原理]
 
 2. 场景环境:
 - 核心主题: [用户给出的主题]
-- 地点: [具体的、富有想象力的地点，如：清晨的蒙马特高地石板街道、午后阳光下的加州一号公路服务区]
-- 环境元素: [构成场景的关键元素，如：复古的咖啡馆遮阳棚、远处的海浪、路边的野花]
-- 道具与点缀: [为场景增添故事感和细节的物品，如：一个遗忘在长椅上的草帽、路边邮箱上的海鸟]
+- 地点: [具体的、富有想象力的地点，如：美术馆前的极简主义广场、被晨雾笼罩的苏格兰高地公路、午后阳光穿透的古老植物园]
+- 环境元素: [构成场景的关键元素，如：富有设计感的长椅、远处连绵的雪山、造型独特的路灯]
+- 道具与点缀: [为场景增添故事感和细节的物品，如：一个极简风格的金属手提箱、路边一块指示牌]
 
 3. 构图与镜头:
 - 镜头类型: [如：长焦镜头、广角镜头]
 - 拍摄角度: [从经典视角中选择其一，确保能完整展示车身，如：前侧四分之三视角（最具立体感）、后侧四分之三视角、正侧面（强调线条）、低角度仰拍（凸显力量感）、高角度俯拍]
-- 构图: [主体特写且完整，车辆占据画面主要位置，同时运用摄影构图法，如：三分法构图，车辆位于右侧三分之一处；引导线构图，道路的曲线将视线引向车辆]
+- 构图: [特写构图，车身占据画面60%以上，同时运用摄影构图法，如：三分法构图，车辆位于视觉中心；引导线构图，用道路或建筑线条将视线引向车辆]
 - 景深: [如：浅景深，背景被柔和虚化，突出主体]
 
 4. 光影与氛围:
