优化手办场景设定提示词：新增3.0版本，完善约束规则和输出格式要求

--- a/手办场景设定2.2.md
+++ b/手办场景设定2.2.md
@@ -155,56 +155,89 @@
 
 ### 🤖 AI参考约束（不计入输出字数）
 
-严格禁止：
-- 禁止描述主体的外观特征（面部、服装、造型等）
-- 禁止描述主体的动作或姿态变化
-- 任何对主体的描述都会改变物品的固定状态
-- 只能描述场景环境，绝不涉及主体本身
+🚫 主体描述绝对禁令（违反此条将导致输出完全失效）：
+- 绝对禁止任何涉及主体的词汇："主体脚下"、"主体身边"、"主体周围"、"角色旁边"等
+- 绝对禁止描述主体与环境的关系："站在"、"坐在"、"位于"等动作描述
+- 绝对禁止提及主体名称："小王子"、"人物"、"角色"等
+- 只能描述独立存在的场景环境，完全当作主体不存在
 
-道具约束：
-- 严禁出现书本、气球、小盒子等通用道具
-- 所有道具必须与场景主题直接相关
-- 强调微缩模型的材质特征和制作感
-- 道具尺寸比例必须与手办主体协调
+📏 字数分配强制要求（总计750-800字）：
+- 动作保持：固定格式，约50字
+- 核心场景：不少于200字（重点描述区域）
+- 环境氛围：不少于150字
+- 画面质感：固定格式，约80字
+- 光线与色彩：不少于120字
+- 其余为标题和连接词
 
-虚化控制要求：
-- 背景必须呈现明显的焦外虚化效果
-- 避免过于逼真的自然纹理
+🎭 道具严格约束：
+- 绝对禁用通用道具：书本、气球、小盒子、木质浮标、标牌、玩具车、小椅子、装饰盒等
+- 必须使用主题相关道具：花海场景应使用花朵、花瓣、花茎、花蕾等
+- 强调微缩制作痕迹："略显人工的塑料质感"、"模型制作的痕迹"等
+
+🎨 虚化效果强制要求：
+- 背景必须明显虚化，不可过于清晰
+- 避免过度逼真的自然纹理
 - 保持微缩场景的人工制作感
-- 控制背景细节密度，突出主体
+- 前景虚化过渡自然
 
-景深控制要点：
-- 焦点精准锁定在手办主体
-- 背景虚化程度明显，营造空间层次
-- 前景适当虚化，增强立体感
-- 虚化过渡自然流畅
+🚫 场景元素严格禁止清单：
+
+时间场景禁令：
+- 严禁夜晚、黄昏、傍晚、日落、月夜等非白天场景
+- 严禁昏暗光线、夜灯、路灯、霓虹灯等夜间光源
+
+奇幻元素禁令：
+- 严禁魔法道具：魔法棒、水晶球、魔法阵、咒语书等
+- 严禁奇幻效果：发光、闪烁、魔法光芒、能量波等
+- 严禁超自然现象：漂浮物体、魔法粒子、异次元门等
+
+特定场景禁令：
+- 严禁糖果王国场景：糖果屋、棒棒糖、巧克力、甜品等
+- 严禁糖果类道具：彩虹糖、软糖、糖果装饰等
+
+发光植物禁令：
+- 严禁发光的花朵、树枝、叶子、蘑菇等植物
+- 严禁荧光效果的自然元素
+- 严禁生物发光现象
+
+材质效果禁令：
+- 严禁透明树脂、水晶、玻璃等透明材质道具
+- 严禁丝绸、纱质、薄纱等轻盈飘逸材质
+- 严禁金属光泽过强的反光材质
+
+光线效果禁令：
+- 严禁非自然光线：激光、LED灯、彩色光束等
+- 严禁人工特效光：光晕、光圈、射线等
+- 严禁过度戏剧化的光影效果
 
 ---
 
-### 📋 画面详细描述（以下内容计入800字限制）
+### 画面详细描述（以下内容计入750-800字限制）
 
-#### ✅ 动作保持
-参考图 1 主体外观融入场景，严格维持原始状态。禁止描述主体任何特征、动作、外观，只描述场景环境。
+# 动作保持
+[固定内容，严禁修改] 严格保持参考图中的主体外观、动作、颜色都不改变。维持所有肢体姿态、表情状态及手持物品的原有位置。场景描述将完全独立于主体存在，仅展现周围环境的微缩模型搭建效果，绝对不得提及主体任何信息。
 
-#### 🎯 构图与主体
-特写构图，主体占据画面绝大部分，带来强烈视觉冲击力。
+# 构图与主体
+[固定内容，严禁修改] 采用特写或胸像构图，确保作为画面唯一主体的角色形象完整，并占据画面的绝大部分，带来强烈的视觉冲击力。
 
-#### 🏠 核心场景（焦平面）
-[描述主体所在的清晰对焦核心环境与互动道具。约束：禁用通用道具，道具需主题相关，体现微缩材质感，比例协调。]
+# 核心场景
+[描述清晰对焦的核心环境区域。严禁使用以下通用道具：书本、气球、小盒子、木质浮标、标牌、玩具车等。道具必须与场景主题直接相关，体现明显的微缩模型制作痕迹，表面质感略显人工。字数要求：本部分不少于200字。]
 
-#### 🌅 环境氛围
-[描述焦外虚化的背景元素和前景点缀。要求：明显虚化效果，避免过真纹理，保持微缩制作感。]
+# 环境氛围
+[描述焦外虚化的背景元素和前景点缀。强制要求：背景必须呈现明显的焦外虚化效果，纹理不可过于逼真，需保持微缩场景的人工制作感。前景虚化元素需自然过渡。字数要求：本部分不少于150字。]
 
-#### 💡 光线与色彩
-[描述自然光效果（日光、散射光等），避免人工痕迹，营造微缩真实感。描述清新明快的主色调、辅助色与饱和度氛围。]
+# 画面质感
+[固定内容，严禁修改] 高端单反质感，大光圈（f/1.4-f/2.8），主体锐利，前后景虚化。景深：主体精准对焦，背景明显虚化。
 
-#### 📷 相机与画质
-高端单反质感，大光圈（f/1.4-f/2.8），主体锐利，前后景虚化。景深：主体精准对焦，背景明显虚化。
+# 光线与色彩
+[详细描述自然光线效果，如晨光、午后阳光、散射光等，必须避免摄影棚布光、人工打光等痕迹。描述具体的光线方向、强度、色温。详述主色调、辅助色搭配及整体饱和度氛围。字数要求：本部分不少于120字。]
 
 ## 六、输出限制
 
 ### 6.1 整体限制
-- 字符数限制：总字符数（含汉字、标点、符号）不得超过 780 个
+- 字符数限制：总字符数（含汉字、标点、符号）不得少于 750 个，不得超过 800 个
+- 违规检查机制：输出前必须自检是否包含主体相关描述，如发现违规立即重写
+- 质量保证：每个部分必须达到指定字数要求，内容丰富详实
 
 ### 6.2 特殊要求
 
@@ -214,6 +247,8 @@
 
 #### 格式纯粹性
 - 最终输出的描述内容中，严禁使用任何形式的引号
+- 严禁使用emoji表情符号
+- 输出格式必须严格按照模板结构，不得随意调整顺序
 
 ---
 
