优化手办场景设定3.0版本：简化固定模板，去除冗余参数和注意事项

--- a/手办场景设定3.0-优化版.md
+++ b/手办场景设定3.0-优化版.md
@@ -142,7 +142,7 @@
 [固定内容，严禁修改] 严格保持参考图中的主体外观、动作、颜色都不改变。维持所有肢体姿态、表情状态及手持物品的原有位置。场景描述将完全独立于主体存在，仅展现周围环境的微缩模型搭建效果，绝对不得提及主体任何信息。注意：每次输出必须完整描述，严禁使用"同上"等省略表达
 
 # 构图与主体
-[固定内容，严禁修改] 采用正面视图构图，确保作为画面唯一主体的角色形象完整，并占据画面的绝大部分，带来强烈的视觉冲击力。注意：必须采用正面视图视角，每次输出必须完整描述
+[固定内容，严禁修改] 采用正面视图构图，确保作为画面唯一主体的角色形象完整，并占据画面的绝大部分，带来强烈的视觉冲击力
 
 # 核心场景
 [描述清晰对焦的核心环境区域。道具必须与场景主题直接相关，体现明显的微缩模型制作痕迹。必须在场景描述中明确强调微缩场景特征，体现手办场景的微缩感和精致感。字数要求：不少于200字。]
@@ -151,7 +151,7 @@
 [描述焦外虚化的背景元素。背景必须呈现明显虚化效果，但即便模糊也要具备完整的场景感和环境氛围，拒绝单纯展示材质质感。场景布局要精致干净，避免元素杂乱，确保不遮挡角色正面。必须体现微缩场景的环境氛围，每次输出必须完整描述。字数要求：不少于150字。]
 
 # 画面质感
-[固定内容，严禁修改] 高端单反质感，大光圈（f/1.4-f/2.8），主体锐利，前后景虚化。景深：主体精准对焦，背景明显虚化。注意：每次输出必须完整描述，严禁使用"同上"等省略表达
+[固定内容，严禁修改] 高端单反质感，大光圈，主体锐利，前后景虚化。景深：主体精准对焦，背景明显虚化
 
 # 光线与色彩
 [详细描述自然光线效果，避免人工打光痕迹。描述光线方向、强度、色温。详述主色调、辅助色搭配及整体饱和度氛围。必须完整描述光线与色彩效果，体现微缩场景的光影特征。字数要求：不少于120字。]
