docs: 删除手办场景设定预览版和V4.0版本

--- a/手办场景设定3.0-优化版.md
+++ b/手办场景设定3.0-优化版.md
@@ -98,6 +98,7 @@
 | 视角限制 | 侧视、俯视、仰视等非正面视图角度 |
 | 遮挡元素 | 任何可能遮挡角色正面的物体或元素 |
 | 杂乱场景 | 过多装饰、复杂道具组合、混乱布局等 |
+| 生物形象 | 除主体宠物外，严禁出现任何动物、人物、角色、玩偶或有面部的生物，包括挂画、摆件、装饰品中的生物形象 |
 
 ### 🎭 道具使用规范
 - 禁用通用道具：书本、气球、小盒子、木质浮标、标牌、玩具车、小椅子等
@@ -169,6 +170,7 @@
 - [ ] 使用简体中文，无英文字母
 - [ ] 无引号、emoji等格式问题
 - [ ] 严格按照模板结构输出
+- [ ] 未出现除主体宠物外的任何生物形象
 
 ### 🔄 质量保证机制
 - 违规检查：发现违规立即重写
