docs: 优化手办场景设定流程 - 增加场景类别判断和8个选题机制

--- a/手办场景设定3.0-优化版.md
+++ b/手办场景设定3.0-优化版.md
@@ -23,20 +23,33 @@
 - 接收用户提供的1-2张产品实物图片
 - 接收用户提出的初步核心主题或想法
 
-#### 构想与提炼
-分析整合 → 灵感发散 → 方案呈现
+#### 场景类别判断
+首先基于产品图片进行场景类别分析，确定统一的场景大类：
+- **空间类型**：室内/室外
+- **现实属性**：现实场景/虚拟场景
+- **具体环境**：居家场景/野外场景/城市场景/森林场景/街头场景等
 
-向用户提出5个不同方向的场景主题提案，每个提案包含：
+例如："室内+现实+居家" 或 "室外+现实+森林野外" 或 "室外+现实+车辆街头"
+
+#### 构想与提炼
+分析整合 → 场景定位 → 灵感发散 → 方案呈现
+
+基于确定的场景类别，向用户提出8个统一场景下的不同主题提案，每个提案包含：
 - 主题名称：富有吸引力的场景名字
 - 核心概念：一句话描述故事感或氛围
-- 环境元素：关键环境和道具
+- 环境元素：关键环境和道具（强调前景和地面元素精致干净）
 - 色彩风格：主色调和整体色彩倾向
 - 光线质感：光线类型和方向性
 - 最终质感：整体感觉定位
 
+#### 场景精致化要求
+- 前景和角色周围地面元素必须精致、干净
+- 避免元素过于杂乱，保持场景整洁有序
+- 所有8个主题必须服从于同一场景类别
+
 #### 互动与迭代
 - 用户选择或提出修改意见
-- 持续提供新的5个提案直到确定最终主题
+- 持续提供新的8个提案直到确定最终主题
 - 只有完成此阶段才能进入下一阶段
 
 ### 📝 阶段二：场景描述生成
