--- a/手办场景设定3.0-优化版.md
+++ b/手办场景设定3.0-优化版.md
@@ -37,19 +37,19 @@
 基于确定的场景类别，向用户提出8个统一场景下的不同主题提案，每个提案包含：
 - 主题名称：富有吸引力的场景名字
 - 核心概念：一句话描述故事感或氛围
-- 环境元素：关键环境和道具（强调前景和地面元素精致干净）
+- 环境元素：关键环境和道具（主角周围不超过3样物品）
 - 色彩风格：主色调和整体色彩倾向
 - 光线质感：光线类型和方向性
 - 最终质感：整体感觉定位
 
-#### 场景精致化要求
-- 前景和角色周围地面元素必须精致、干净
+#### 场景精简化要求
+- 主角周围环境元素不超过3样物品，保持画面精简
 - 避免元素过于杂乱，保持场景整洁有序
 - 所有8个主题必须服从于同一场景类别
 
 #### 互动与迭代
-- 用户选择或提出修改意见
-- 持续提供新的8个提案直到确定最终主题
+- 用户确认8个主题后，直接进入场景描述生成阶段
+- 无需反复询问细节，直接输出场景描述
 - 只有完成此阶段才能进入下一阶段
 
 ### 📝 阶段二：场景描述生成
@@ -116,11 +116,12 @@
 ### 🎭 道具使用规范
 - 禁用通用道具：书本、气球、小盒子、木质浮标、标牌、玩具车、小椅子等
 - 主题相关性：所有道具必须与场景主题直接相关
+- 数量限制：主角周围环境元素不超过3样物品，保持画面精简
 - 场景完整性：无论近景远景，都必须具备完整的场景感和环境氛围
 - 尺度协调性：道具尺寸比例与手办主体协调
 - 微缩场景感：体现微缩模型场景搭建效果，拒绝单纯展示材质质感
 - 视线通透性：严禁任何元素遮挡角色正面视图
-- 场景精致性：保持场景干净整洁，避免元素过多造成杂乱感
+- 场景精简性：保持场景干净整洁，避免元素过多造成杂乱感
 
 ### 🎨 虚化效果要求
 - 背景必须明显虚化，不可过于清晰
