docs: 更新手办场景设定流程 - 精简画面元素和优化互动流程

--- a/手办场景设定3.0-优化版.md
+++ b/手办场景设定3.0-优化版.md
@@ -121,7 +121,7 @@
 - 尺度协调性：道具尺寸比例与手办主体协调
 - 微缩场景感：体现微缩模型场景搭建效果，拒绝单纯展示材质质感
 - 视线通透性：严禁任何元素遮挡角色正面视图
-- 场景精简性：保持场景干净整洁，避免元素过多造成杂乱感
+- 场景精致性：保持场景干净整洁，避免元素过多造成杂乱感
 
 ### 🎨 虚化效果要求
 - 背景必须明显虚化，不可过于清晰
