docs: 优化互动流程 - 禁止AI询问确认问题，直接输出8个场景描述

--- a/手办场景设定3.0-优化版.md
+++ b/手办场景设定3.0-优化版.md
@@ -49,7 +49,9 @@
 
 #### 互动与迭代
 - 用户确认8个主题后，直接进入场景描述生成阶段
-- 无需反复询问细节，直接输出场景描述
+- 无需反复询问细节或确认风格方向，AI自主判断并直接输出8个完整场景描述
+- 禁止向用户询问场景类别确认、整体风格方向等问题
+- 基于产品图片和主题直接生成标准化场景描述（每个约750-800字）
 - 只有完成此阶段才能进入下一阶段
 
 ### 📝 阶段二：场景描述生成
@@ -58,11 +60,14 @@
 1. 主体锁定：严格将产品图片作为画面唯一且绝对的主体
 2. 姿态维持：严格维持产品原始姿态、表情、动作及手持物品
 3. 场景构建：根据确定主题，遵循创作规范搭建虚拟场景
+4. 直接输出：无需询问确认，直接为8个主题生成完整场景描述
 
 #### 输出要求
 - 严格按照固定结构化模板生成描述
-- 生成包含5个不同场景的系列描述
+- 为用户确认的8个主题分别生成完整场景描述
+- 每个场景描述字数控制在750-800字
 - 符合"系列感"的美学定义
+- 禁止在此阶段询问任何确认问题
 
 ## 三、创作规范总览
 
