优化小红书文案生成系统 - 精炼结构和规范格式
主要优化内容：
- 重构为更实用的精炼格式，便于AI理解和执行
- 标题字数调整为10-15字，更符合平台特性
- 句子字数规范为10-16字，确保内容充实
- 明确三段式结构：引子+描述+收尾
- 优化收尾句长度，提升情感表达效果
- 完善负面清单，提高输出质量
- 添加丰富的创作工具箱：故事引擎、基调拨杆、风味触发库
- 提供标准化输出模板，确保格式一致性

--- a/小红书文案.md
+++ b/小红书文案.md
@@ -1,71 +1,148 @@
-# “心流叙事”：小红书内容生成系统 V4.0
+目标：一图十文，讲一个小故事。不煽情，不吐槽；用简洁叙事与具体细节完成“起—承—收”。
 
-## 第一章：核心哲学——“舞台与戏剧”
+1）创作总则（三行记住即可）
 
-本系统的唯一目标，是彻底摒弃“看图说话”的创作模式。
+讲故事，不抒情：从事件入手，而非情绪堆叠。
 
-我们创作的不是图片的“说明书”，而是基于图片触发的“心灵戏剧”。
+不看图说话：图片仅作引子，文案必须离图也成立。
 
-- 图片是“舞台”：它只提供一个时间、一个地点、一个环境。
-- 文案是“戏剧”：它上演的是角色的内心独白、是跨越时空的回忆、是对整个生命旅程的感悟。
+短句有画面：每句 ≤16 字；少形容词，多动作与细节。
 
-核心检验标准： 将文案与图片分离，文案本身是否依然是一个能独立成立、并引人入胜的内心片段？如果是，则创作成功。
+2）输入→输出（最小接口）
 
----
+输入
 
-## 第二章：创作流程
+图片：1–5 张（或文字描述）
 
-### 第一步：主题熔炉 (Theme Crucible) - 锻造叙事核心
+产品名：[产品名]
 
-在观察所有图片后，我们不应分散地描述它们，而应将它们全部投入熔炉，锻造出统一的“叙事核心”。
+基调：纪实 / 松弛 / 轻童话（三选一）
 
-1.  识别象征符号 (Symbol)：寻找贯穿始终的视觉元素，并定义其象征意义。
-    -   案例：羽毛外衣 -> 对飞翔的渴望；铃铛 -> 旅途中的伙伴/初心。
-2.  定义时空跨度 (Timeline)：识别场景的逻辑关系，定义旅程的起点与终点。
-    -   案例：春夏秋冬 -> 一场穿越四季、完整的时间轮回。
-3.  提炼核心驱动 (Core Drive)：结合象征符号与时空跨度，定义角色的核心欲望与行动。
-    -   案例：一个身披羽衣的小精灵，为了实现飞翔的梦想，踏上了一场穿越四季的漫长旅程。
-4.  设定成长弧光 (Character Arc)：定义角色在此时空跨度中的心境变化。
-    -   案例：天真（对飞翔充满不切实际的幻想） -> 坚韧（在逆境中学会坚持） -> 反思（开始理解飞翔有不同形式） -> 释然（找到内心的自由，即为飞翔）。
+需要：10 组（标题 + 正文）
 
-输出： 一个包含以上四点的，完整的“叙事核心”。
+强约束
 
-### 第二步：灵魂脚本 (Soul Script) - 演绎内心戏剧
+标题：10–15 字，故事线索优先（线索/任务/道具主语化/时间钩子/轻反差 ≥1）
 
-这是系统的核心引擎。基于“叙事核心”，为每一个“舞台”（图片）创作对应的“戏剧”（文案）。
+正文：见第 4 节分行结构；总字数 140–200（更扎实、信息更足）。
 
-1.  最高原则：解耦叙事 (Decoupled Narrative)
-    -   定义：严禁文案主体内容直接描述当前图片。图片仅作为触发角色内心活动的“引子”。文案必须聚焦于由“引子”引发的、对其它时空（过去/未来）的回忆、对比和感悟。
-    -   检验方法：文案的核心情感和信息，是否在图片中完全看不到？如果是，则初步成功。
-    -   案例：
-        -   舞台 (图片)：角色站在春天的绿枝上。
-        -   失败的戏剧 (耦合文案)：“春天来了，树枝发芽了，空气真好。我好开心，对未来充满希望。”
-        -   成功的戏剧 (解耦文案)：“我的指尖终于又碰到了湿润的苔藓。这触感，让我想起冬天时被冻得毫无知觉的手指。原来那些刺骨的寒冷，真的可以被这样温柔地融化掉。我明白了，旅途的意义，就是为了感受这种‘融化’的瞬间。”
+固定话题：#HelloGoods #AIGC #POPMART #手办 #泡泡玛特
 
-2.  核心技法：时空锚点 (Spacetime Anchor)
-    -   定义：将当前图片视为一个“时空锚点”。角色站在此刻，内心却在过去与未来之间穿梭。
-    -   应用：
-        -   回望之锚：站在“现在”，主要抒发对“过去”的感受。
-        -   展望之锚：站在“现在”，主要抒发对“未来”的期许与想象。
-        -   对比之锚：站在“现在”，同时拉出“过去”与“未来”，在对比中产生张力。
+3）标题怎么“有趣但不搞笑”
 
-### 第三步：风格滤镜 (Style Filter) - 渲染氛围
+线索型：给出待解元素 →「奶油刀不见了，甜度也跑了」
 
-1.  感官优先：优先调用触觉、听觉、嗅觉，用以表现回忆的质感和情感的温度。
-2.  第一人称沉浸：所有文字都是“我”的内心独白，不存在第二个角色，也不与读者对话。
-3.  不完美口吻：允许使用“嗯…”、“我猜…”、“原来…”等口语词，营造真实的思考过程。
+任务型：交代目标 →「今天的目标：把周一切成两半」
 
----
+道具主语化：让物件“做事” →「小叉子负责把慌张分蛋糕」
 
-## 第三章：输出规格
+时间钩子：抓住时刻 →「三点一刻，计划开始动手」
 
-1.  数量：必须且只能输出10个标题和10个对应的正文。
-2.  标题规格：
-    -   字数：12至20字。
-    -   核心要求：标题必须是“戏剧”的点睛之笔，是角色从内心感悟中提炼出的“金句”，而不是对“舞台”的描述。
-        -   案例（配图为春天）：好标题 -> “原来，寒冷是为了让你更懂温暖”
-3.  正文规格：
-    -   字数：120至150字。
-    -   核心要求：必须严格遵守“解耦叙事”原则，构成一个完整的内心片段。
-4.  必带标签：`#手办` `#潮玩` `#我的日常` `#治愈` `#[产品名]`
-5.  绝对禁止：禁止引导互动、禁止直接提问、禁止上帝视角。
+轻反差：温和翻转 →「点了甜，却学会慢一点」
+
+标题规范（避免“莫名其妙”）
+
+主语+动词+锚点：标题中必须出现明确主语（优先“我/具体物件”）与具体行动，并包含时间/地点/道具锚点 ≥1。
+
+可预期后续：读者能据标题推断正文会发生一件小事。
+
+信息词优先：优先使用“刀/叉/杯/罐/石子路/三点/清单”等具体名词。
+
+禁词：玄幻/空泛词（如：精灵/魔法/命运/光的祝福等）。
+
+标题脚手架（直接套用）
+
+「[时间锚]，[我/道具]要[动作]」→ 例：三点一刻，我把下午切两半
+
+「[地点锚]，[动作]+[结果]」→ 例：石子路口，清单打完一半
+
+「[道具]负责[任务]，[我]负责[结果]」→ 例：小叉子分慌张，我分蛋糕
+
+「今天的[任务]：[具体动作]」→ 例：今天的任务：把热量平分
+
+标题检查清单：主语清晰？动作具体？有锚点？能预期？包含信息名词？满足≥4项再放行。
+
+4）正文固定结构（强约束）
+
+逐行输出；每句 10–16 字；允许口语停顿；总字数 140–200。
+
+第1行：一句引子（抛出线索/目标/任务）
+
+（空一行）
+
+第3–6行：3–4 句描述
+
+用【行动/对照/预期】推进
+
+至少 1 处触觉/嗅觉/听觉
+
+必须出现 2 个以上具体名词（如刀口/杯壁/糖粒/石子路/玻璃罐/三点）
+
+至少 2 个明确动作动词（切/分/掀/拧/装/记）
+
+（空一行）
+
+第8–9行：1–2 句收束（结果/微变化/轻反差，不可鸡汤）
+
+（空一行）
+
+标签：#HelloGoods #AIGC #POPMART #手办 #泡泡玛特
+
+5）故事引擎（随取随用）
+
+任务—障碍—微解决：目标→被打断→换个办法完成。
+
+交换/约定：用小代价换小收获（如“少一口换一刻安静”）。
+
+时间跳切：一个小跳点让故事成立（如“倒数十秒开吃”）。
+
+伏笔与回扣：前文出现的道具在结尾完成作用。
+
+物件与规则：用“器具/规则”组织故事（分蛋糕、配比、排队）。
+
+6）基调拨杆（风格滑块）
+
+纪实：直给信息，少比喻；动作更“硬”。
+
+松弛：短句、留白；语速慢一点。
+
+轻童话：允许 1 个克制比喻；仍以事件推进。
+
+7）风味触发库（克制使用）
+
+触觉：温热杯壁 / 细糖粒 / 粗粝木纹
+
+嗅觉：香草籽 / 柠檬皮屑 / 烤松饼
+
+听觉：轻瓷碰杯 / 刀锋轻响 / 远处水声
+
+规则：每段感官词最多 2 个。
+
+8）负面清单（命中即重写）
+
+直述当前画面（颜色/地点/姿态）
+
+说心情，不说事件（“被治愈/很温柔/很美好”）
+
+提问互动与口号式收尾
+
+纯形容词堆叠、短句（<10字）、拖长句（>16 字）
+
+虚主语与玄幻设定（她/他/精灵/魔法等），优先改为第一人称或具体物件。
+
+10）标准输出模板（复制 10 次）
+
+标题（10–15字，含主语+动作+锚点）：
+
+正文：
+引子一句（≤16字，抛出任务/线索）
+
+句子二（≤16字，动作+名词）
+句子三（≤16字，动作+感官）
+句子四（≤16字，细节名词）
+句子五（≤16字，推进/对照）
+
+收束一句（≤16字，结果/轻反差）
+收束二（≤16字，可省）
+
+标签：#HelloGoods #AIGC #POPMART #手办 #泡泡玛特
