优化文档格式和内容结构
主要优化内容：
- 主流程.md：移除表情符号，使文档更加简洁专业
- 手办场景设定3.0-优化版.md：
  - 重新组织绝对禁令表格，分类更清晰
  - 简化标题格式，移除表情符号
  - 优化约束条件的呈现方式
  - 提升文档的可读性和专业性

--- a/主题描述.md
+++ b/主题描述.md
@@ -6,7 +6,7 @@
 
 ## 任务说明
 
-你将收到两份输入信息：一份来自【视觉分析师】的分析报告。你的工作是构思出一个统一的、高级的创意概念，然后输出一份指导后续场景创作的【创意纲要】。
+你将收到两份输入信息：一份来自【视觉分析师】的分析报告。你的工作是构思出一个统一的、高级的创意概念，并一次性输出五套指导后续场景创作的【创意纲要】。
 
 ## 工作流程
 
@@ -17,6 +17,8 @@
 3. 确立色彩规范：根据概念的氛围和情感基调，设定一套严格的色彩编码系统。
 
 ## 输出格式 - 【创意纲要】
+
+请一次性输出五套创意纲要；每套均包含以下字段：
 
 - 系列主题：
 - 主题阐述：
