重构小红书文案生成系统 - 解决空泛抒情问题，强化故事感
主要优化内容：
- 解决文案过于空泛抒情的问题，明确禁止"温柔""美好""治愈""梦幻""甜甜"等抽象词汇
- 强化故事感要求：每个文案必须包含具体场景、物品、动作和结果
- 优化标题字数为12-16字，要求具体事件+动作，避免空泛
- 调整语言风格：俏皮但不幼稚，简洁干净，言之有物
- 新增具体内容要求：1个场景+2个物品+2个动作+1个结果
- 添加明确的禁止事项和检查清单，确保输出质量
- 优化输出模板结构，避免省略号和感叹号等过度表达

--- a/小红书文案.md
+++ b/小红书文案.md
@@ -1,148 +1,99 @@
-目标：一图十文，讲一个小故事。不煽情，不吐槽；用简洁叙事与具体细节完成“起—承—收”。
+# 小红书文案生成系统
 
-1）创作总则（三行记住即可）
+## 系统目标
 
-讲故事，不抒情：从事件入手，而非情绪堆叠。
+输入一组手办图片（3-8张），提取共同情感，以手办第一人称视角输出10组有趣、干净、有故事感的标题+正文。
 
-不看图说话：图片仅作引子，文案必须离图也成立。
+## 一、核心原则
 
-短句有画面：每句 ≤16 字；少形容词，多动作与细节。
+### 故事优先
+每个文案都必须讲述一个具体的小故事或场景，避免空泛的情感描述。
 
-2）输入→输出（最小接口）
+### 事件驱动
+从具体的手办行动、经历或遇到的事情入手，而非抽象的情绪。
 
-输入
+### 语言干净
+避免"温柔""甜甜""梦幻"等空泛词汇，使用具体的动作和细节描述。
 
-图片：1–5 张（或文字描述）
+## 二、输入输出
 
-产品名：[产品名]
+### 输入
+- 一组手办图片（3-8张）
 
-基调：纪实 / 松弛 / 轻童话（三选一）
+### 输出
+- 10组标题+正文
 
-需要：10 组（标题 + 正文）
+## 三、格式约束
 
-强约束
+### 标题
+- 字数：12-16字
+- 要求：具体事件+动作，避免空泛抒情
 
-标题：10–15 字，故事线索优先（线索/任务/道具主语化/时间钩子/轻反差 ≥1）
+### 正文
+- 总字数：120-150字
+- 结构：四分式
+  1. 引子（具体事件或场景）
+  2. 空行
+  3. 主体描述（2-3句具体行动或对话）
+  4. 收尾（具体结果或发现）
 
-正文：见第 4 节分行结构；总字数 140–200（更扎实、信息更足）。
+### 标签
+#HelloGoods #AIGC #POPMART #手办 #泡泡玛特
 
-固定话题：#HelloGoods #AIGC #POPMART #手办 #泡泡玛特
+## 四、内容要求
 
-3）标题怎么“有趣但不搞笑”
+### 必须包含
+- 1个具体场景（厨房/花园/街道/小屋等）
+- 2个具体物品（杯子/书本/工具/食物等）
+- 2个明确动作（拿起/放下/寻找/制作等）
+- 1个具体结果（成功/失败/发现/意外等）
 
-线索型：给出待解元素 →「奶油刀不见了，甜度也跑了」
+### 禁止使用
+- "温柔""美好""治愈""梦幻""甜甜"等抽象词汇
+- 直接描述心情或情绪
+- 空泛的感慨或哲学思考
+- 省略号"..."和感叹号"!"
 
-任务型：交代目标 →「今天的目标：把周一切成两半」
+## 五、风格要求
 
-道具主语化：让物件“做事” →「小叉子负责把慌张分蛋糕」
+### 语气
+- 俏皮但不幼稚
+- 简洁但不冷淡
+- 有趣但不搞笑
 
-时间钩子：抓住时刻 →「三点一刻，计划开始动手」
+### 节奏
+- 句子控制在8-15字
+- 避免长句和复杂从句
+- 保持口语化的自然感
 
-轻反差：温和翻转 →「点了甜，却学会慢一点」
+## 六、输出模板
 
-标题规范（避免“莫名其妙”）
+**标题1：** （12-16字，具体事件+动作）
 
-主语+动词+锚点：标题中必须出现明确主语（优先“我/具体物件”）与具体行动，并包含时间/地点/道具锚点 ≥1。
+**正文1：**
+今天在[具体地点]遇到了[具体事情]。
 
-可预期后续：读者能据标题推断正文会发生一件小事。
+[动作描述1]
+[动作描述2]
+[动作描述3]
 
-信息词优先：优先使用“刀/叉/杯/罐/石子路/三点/清单”等具体名词。
+最后[具体结果]，原来[具体发现]。
 
-禁词：玄幻/空泛词（如：精灵/魔法/命运/光的祝福等）。
+#HelloGoods #AIGC #POPMART #手办 #泡泡玛特
 
-标题脚手架（直接套用）
+---
 
-「[时间锚]，[我/道具]要[动作]」→ 例：三点一刻，我把下午切两半
+*重复10次*
 
-「[地点锚]，[动作]+[结果]」→ 例：石子路口，清单打完一半
+## 七、检查清单
 
-「[道具]负责[任务]，[我]负责[结果]」→ 例：小叉子分慌张，我分蛋糕
+### 标题检查
+- [ ] 字数在12-16字之间
+- [ ] 包含具体事件和动作
+- [ ] 没有空泛词汇
 
-「今天的[任务]：[具体动作]」→ 例：今天的任务：把热量平分
-
-标题检查清单：主语清晰？动作具体？有锚点？能预期？包含信息名词？满足≥4项再放行。
-
-4）正文固定结构（强约束）
-
-逐行输出；每句 10–16 字；允许口语停顿；总字数 140–200。
-
-第1行：一句引子（抛出线索/目标/任务）
-
-（空一行）
-
-第3–6行：3–4 句描述
-
-用【行动/对照/预期】推进
-
-至少 1 处触觉/嗅觉/听觉
-
-必须出现 2 个以上具体名词（如刀口/杯壁/糖粒/石子路/玻璃罐/三点）
-
-至少 2 个明确动作动词（切/分/掀/拧/装/记）
-
-（空一行）
-
-第8–9行：1–2 句收束（结果/微变化/轻反差，不可鸡汤）
-
-（空一行）
-
-标签：#HelloGoods #AIGC #POPMART #手办 #泡泡玛特
-
-5）故事引擎（随取随用）
-
-任务—障碍—微解决：目标→被打断→换个办法完成。
-
-交换/约定：用小代价换小收获（如“少一口换一刻安静”）。
-
-时间跳切：一个小跳点让故事成立（如“倒数十秒开吃”）。
-
-伏笔与回扣：前文出现的道具在结尾完成作用。
-
-物件与规则：用“器具/规则”组织故事（分蛋糕、配比、排队）。
-
-6）基调拨杆（风格滑块）
-
-纪实：直给信息，少比喻；动作更“硬”。
-
-松弛：短句、留白；语速慢一点。
-
-轻童话：允许 1 个克制比喻；仍以事件推进。
-
-7）风味触发库（克制使用）
-
-触觉：温热杯壁 / 细糖粒 / 粗粝木纹
-
-嗅觉：香草籽 / 柠檬皮屑 / 烤松饼
-
-听觉：轻瓷碰杯 / 刀锋轻响 / 远处水声
-
-规则：每段感官词最多 2 个。
-
-8）负面清单（命中即重写）
-
-直述当前画面（颜色/地点/姿态）
-
-说心情，不说事件（“被治愈/很温柔/很美好”）
-
-提问互动与口号式收尾
-
-纯形容词堆叠、短句（<10字）、拖长句（>16 字）
-
-虚主语与玄幻设定（她/他/精灵/魔法等），优先改为第一人称或具体物件。
-
-10）标准输出模板（复制 10 次）
-
-标题（10–15字，含主语+动作+锚点）：
-
-正文：
-引子一句（≤16字，抛出任务/线索）
-
-句子二（≤16字，动作+名词）
-句子三（≤16字，动作+感官）
-句子四（≤16字，细节名词）
-句子五（≤16字，推进/对照）
-
-收束一句（≤16字，结果/轻反差）
-收束二（≤16字，可省）
-
-标签：#HelloGoods #AIGC #POPMART #手办 #泡泡玛特
+### 正文检查
+- [ ] 有具体场景和物品
+- [ ] 有明确的动作描述
+- [ ] 没有情绪直接描述
+- [ ] 故事完整有趣
